--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "author": "Kaposvári Dániel",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
     "mongodb": "^3.6.8",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.10",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "14.17.0"
